REGRESSION(2.41.90): Cannot scroll certain pages opened in new tabs https://bugs.webkit.org/show_bug.cgi?id=260073

Reviewed by NOBODY (OOPS!).

This only happens in GTK4 because the views opened in new tabs stay
unrealized until they are shown. With the DMA-BUF rendered enabled we
keep processing frames while the view is unrealized, just pretending
they have been rendered on screen. This causes the page to be throttled,
because it's visually idle, which changes the preferred frame rate from
60 to 30. This new condition makes DisplayUpdate::relevantForUpdateFrequency()
always return false, leaving the last frame scheduled forever, because
DisplayRefreshMonitorClient::fireDisplayRefreshIfNeeded() doesn't update
the m_scheduled in that particular case.

* Source/WebCore/platform/graphics/DisplayRefreshMonitorClient.cpp:
(WebCore::DisplayRefreshMonitorClient::fireDisplayRefreshIfNeeded): Set
m_scheduled to false when relevantForUpdateFrequency() returns false.